<resources>
    <string name="app_name">Psybotic</string>
    <string name="server_client_id">206287057539-ejk61ub18d21orhpfh08divi4brrbhvh.apps.googleusercontent.com</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_logo_text">Login Logo</string>
    <string name="login_text">Login</string>
    <string name="email_input_label">Email</string>
    <string name="input_password_label">Password</string>
    <string name="title_activity_main">Psybotic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="view_notification">View Notification</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_with_google">SIGN IN WITH GOOGLE</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="login_as_guest">LOGIN AS GUEST</string>
    <string name="profile_view_image">Profile view image</string>
    <string name="logout_icon_text">Logout icon</string>
    <string name="profile_title">Profile</string>
    <string name="profile_back_button_text">profile_back_button</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="city_hint">City-Province</string>
    <string name="family_members_title">Family Members</string>
    <string name="notification_title">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="add_fm_button_text">ADD NEW FAMILY MEMBER</string>
    <string name="write_a_message">Write A Message…</string>
    <string name="title_activity_psychologists">Psychologists</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="emergency_contacts_title">Emergency Contacts</string>
    <string name="add_ec_button_text">ADD NEW EMERGENCY CONTACT</string>
    <string name="psychologists">Psychologists</string>
    <string name="pr_mehmet">Pr. Mehmet</string>
    <string name="pr_o_uz">Pr. Oğuz</string>
    <string name="click_your_psychologist_to_make_a_c">Click Your Psychologist To Make A Chat</string>
    <string name="pr_muhammed">Pr. Muhammed</string>
    <string name="pr_berat">Pr. Berat</string>
    <string name="pr_selen">Pr. Selen</string>
    <string name="pr_mert">Pr. Mert</string>
    <string name="EmptyString">..</string>
    <string name="chat_default_title">Chatbot</string>
    <string name="conversations_title">Conversations</string>
    <string name="on_going_conversations">On going conversations</string>
    <string name="start_conversation_text">Chat now</string>
    <string name="see_more_text">See more</string>
    <string name="available_psychologists_text">Avaliable Psychologists</string>
    <string name="title_activity_psychologist_info">PsychologistInfoActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_label">Title</string>
    <string name="name_label">Name</string>
    <string name="expertise_label">Expertise</string>
    <string name="age_of_interest">Age of interest</string>
    <string name="high_school">High School</string>
    <string name="university">University</string>
    <string name="master">Master</string>
    <string name="biography">Biography</string>

</resources>