<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.info.PsychologistInfoActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/psychologist_info_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/psychologist_info_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:clickable="true"
            android:contentDescription="@string/profile_back_button_text"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onClick"
            android:padding="5dp"
            app:srcCompat="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/psychologist_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:id="@+id/image_card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:id="@+id/psychologist_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/name_info_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="10dp"
                app:contentPaddingLeft="20dp"
                app:contentPaddingRight="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/title_label"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="" />

                    <TextView
                        android:id="@+id/name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/name_label"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="" />

                    <TextView
                        android:id="@+id/expertise_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/expertise_label"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/expertise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="" />

                    <TextView
                        android:id="@+id/age_of_interest_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/age_of_interest"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/age_of_interest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="" />

                    <TextView
                        android:id="@+id/high_school_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/high_school"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/high_school"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="" />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/university_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/university"
                        android:textColor="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/university"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="" />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/master_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/master"
                        android:textColor="@color/colorPrimary" />
                    <TextView
                        android:id="@+id/master"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="" />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/bio_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/biography"
                        android:textColor="@color/colorPrimary" />
                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/bio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>