<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/login_logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_form_container"
        android:layout_width="0dp"
        android:layout_weight=".70"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/container"
        app:layout_constraintRight_toRightOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="80dp"
        android:paddingVertical="20dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/login_form_background"
        android:elevation="10dp">

        <TextView
            android:labelFor="@+id/login_email"
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_input_label"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@id/login_email"
            app:layout_constraintLeft_toLeftOf="@id/login_email"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:backgroundTint="#ffffff"/>

        <TextView
            android:labelFor="@+id/login_password"
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_password_label"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@id/login_password"
            app:layout_constraintLeft_toLeftOf="@id/login_password"
            android:textColor="#ffffff"/>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/login_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:importantForAutofill="no"
            android:textColor="#ffffff"
            android:textColorHighlight="#ffffff"
            android:backgroundTint="#ffffff"
            android:foregroundTint="#ffffff"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        app:layout_constraintLeft_toLeftOf="@+id/container"
        app:layout_constraintRight_toRightOf="@+id/container"
        app:layout_constraintTop_toBottomOf="@+id/login_form_container"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        android:background="@drawable/border_radius_background"
        android:textColor="#ffffff"/>

</androidx.constraintlayout.widget.ConstraintLayout>