<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.realUserChat.DialogList"
    android:fillViewport="false">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/dialogs_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:id="@+id/dialogs_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/abc_vector_test"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/profile_back_button_text"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            android:onClick="onClick"
            />

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conversations_title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/on_goings_title_card"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:contentPadding="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/on_going_conversations"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

            </androidx.cardview.widget.CardView>
            <ProgressBar
                android:id="@+id/on_goings_progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/on_goings_title_card"/>
            <com.stfalcon.chatkit.dialogs.DialogsList
                android:id="@+id/dialogsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/on_goings_title_card"/>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="70dp"
                android:id="@+id/psychologist_list_title_card"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:contentPadding="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/dialogsList">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_psychologists_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>
            <ProgressBar
                android:id="@+id/loading_psychologists"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/psychologist_list_title_card"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/psychologist_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/psychologist_list_title_card"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>